🐤 Add redux and all it's shenanigans
Add spread, rest babel transform

Re-add packages because npm5 did not install them

Add reducers, actions, types, selectors, store, and provider

Log it so you can see pretty output

--- a/.babelrc
+++ b/.babelrc
@@ -3,6 +3,7 @@
     ["es2015", {"modules": false}], "react"
   ],
   "plugins": [ 
-    "react-hot-loader/babel"
+    "react-hot-loader/babel",
+    "transform-object-rest-spread"
   ]
 }
