--- a/package.json
+++ b/package.json
@@ -14,15 +14,22 @@
     "express": "^4.15.3",
     "mongoose": "^4.10.4",
     "react": "^15.5.4",
-    "react-dom": "^15.5.4"
+    "react-dom": "^15.5.4",
+    "react-redux": "^5.0.5",
+    "recompose": "^0.23.4",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "react-hot-loader": "^3.0.0-beta.7",
+    "redux-logger": "^3.0.6",
     "standard": "^10.0.2",
     "webpack": "^2.6.1",
     "webpack-dev-middleware": "^1.10.2",
